--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,18 @@
 name = "euklid"
 version = "0.1.0"
 edition = "2018"
+authors = ["Vlad Eminovici veminovici@hotmail.com"]
+homepage = "https://github.com/veminovici/euklid"
+repository = "https://github.com/veminovici/euklid"
+keywords = ["crdt", "data-structures", "distributed-systems", "vector-clock"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[dev-dependencies]
+quickcheck = "1.0"
+quickcheck_macros = "1.0"
+
+[profile.release]
+debug = true
