--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - uses: actions-rs/toolchain@v1
       with:
@@ -51,3 +53,10 @@ jobs:
     - uses: actions-rs/cargo@v1
       with:
         command: clippy
+
+    - name: Push to coveralls.io
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+      run: |
+        cargo install cargo-tarpaulin
+        cargo tarpaulin --ciserver github-ci --coveralls $COVERALLS_REPO_TOKEN
