refactor the workflow file

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,25 +35,17 @@ jobs:
         cargo install cargo-check
         cargo check --verbose
 
-    - uses: actions-rs/cargo@v1
-      with:
-        command: build
-        args: --verbose
+    - name: Build
+      run: cargo build --verbose
 
-    - uses: actions-rs/cargo@v1
-      with:
-        command: test
-        args: --verbose
+    - name: Build tests
+      run: cargo test --verbose --no-run
 
-    - uses: actions-rs/cargo@v1
-      with:
-        command: test
-        args: --doc --verbose
+    - name: Run tests
+      run: cargo test --verbose --no-fail-fast -- --test-threads=1
 
-    - uses: actions-rs/cargo@v1
-      with:
-        command: fmt
-        args: -- --check
+    - name: Fmt check
+      run: cargo fmt -- --check
 
     - uses: actions-rs/cargo@v1
       with:
