--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,14 @@
-name: tests
+name: CI Tests
 on: [push, pull_request]
 
 jobs:
-  test:
+  Tests:
     runs-on: ubuntu-latest
     steps:
 
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - uses: actions-rs/toolchain@v1
       with:
