--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
 name = "euklid"
-version = "0.1.0"
-edition = "2018"
+description = "Library for CRDT"
+version = "0.0.1"
 authors = ["Vlad Eminovici veminovici@hotmail.com"]
+license = "Apache-2.0"
 homepage = "https://github.com/veminovici/euklid"
 repository = "https://github.com/veminovici/euklid"
+documentation = "https://docs.rs/euklid"
 keywords = ["crdt", "data-structures", "distributed-systems", "vector-clock"]
+edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
