--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/upload-release-asset@v1.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PROJECT_NAME: euklid
+          PROJECT_NAME: ${{ PROJECT_NAME }}
         with:
           upload_url: ${{ steps.make_release.outputs.upload_url }}
           asset_content_type: application/vnd.debian.binary-package
