--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,10 @@ on:
     tags:
     - 'v[0-9]+.[0-9]+.[0-9]+'
 
+env:
+  PROJECT_NAME: euklid
+
+
 jobs:
   release:
     name: release
@@ -45,7 +49,7 @@ jobs:
         uses: actions/upload-release-asset@v1.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PROJECT_NAME: ${{ PROJECT_NAME }}
+          PROJECT_NAME: $PROJECT_NAME
         with:
           upload_url: ${{ steps.make_release.outputs.upload_url }}
           asset_content_type: application/vnd.debian.binary-package
