--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,16 +45,16 @@ jobs:
           draft: true
           prerelease: false
 
-      - name: Upload assets to Github
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PROJECT_NAME: $PROJECT_NAME
-        with:
-          upload_url: ${{ steps.make_release.outputs.upload_url }}
-          asset_content_type: application/vnd.debian.binary-package
-          asset_path: target/debian/${PROJECT_NAME}_${{ steps.get_version.outputs.VERSION }}_amd64.deb
-          asset_name: ${PROJECT_NAME}_${{ steps.get_version.outputs.VERSION }}_amd64.deb
+      # - name: Upload assets to Github
+      #   uses: actions/upload-release-asset@v1.0.1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     PROJECT_NAME: $PROJECT_NAME
+      #   with:
+      #     upload_url: ${{ steps.make_release.outputs.upload_url }}
+      #     asset_content_type: application/vnd.debian.binary-package
+      #     asset_path: target/debian/${PROJECT_NAME}_${{ steps.get_version.outputs.VERSION }}_amd64.deb
+      #     asset_name: ${PROJECT_NAME}_${{ steps.get_version.outputs.VERSION }}_amd64.deb
 
       - name: Publish to crates.io
         env:
