Fix the project name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,7 @@ jobs:
     name: Test
     needs: [build, clippy, fmt]
     env:
-      PROJECT_NAME_UNDERSCORE: yos
+      PROJECT_NAME_UNDERSCORE: euklid
       CARGO_INCREMENTAL: 0
       RUSTFLAGS: -Zprofile -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests -Cpanic=abort
       RUSTDOCFLAGS: -Cpanic=abort
