--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
-[workspace]
-members = [
-    "euklid-clocks",
-    "euklid-kmerge",
-    "euklid-num",
-]
+[package]
+name = "rust-euklid"
+version = "0.1.0"
+edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+
+[dev-dependencies]
+quickcheck = "1.0"
+quickcheck_macros = "1.0"
